replays/errorlog-20181104-093253-0500-1541341973-32-32-1.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    pre compute needed stuff here before intializing game
              ^
SyntaxError: invalid syntax

